2020-01-29  Sihui Liu  <sihui_liu@apple.com>

        Crash under com.apple.WebKit.Networking at WebKit: WebKit::WebIDBServer::suspend
        https://bugs.webkit.org/show_bug.cgi?id=206904
        <rdar://problem/58791603>

        Reviewed by Maciej Stachowiak.

        Wait until m_server is set in constructor of WebIDBServer to make sure m_server can be accessed in 
        WebIDBServer::suspend.

        * NetworkProcess/IndexedDB/WebIDBServer.cpp:
        (WebKit::WebIDBServer::WebIDBServer):

2020-01-29  Brent Fulgham  <bfulgham@apple.com>

        Unreviewed, rolling out r255217 and r255217.

        * GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:
        * WebProcess/com.apple.WebProcess.sb.in:

2020-01-29  Chris Dumez  <cdumez@apple.com>

        [iOS] Add managed preference to allow legacy sync XHRs during page dismissal
        https://bugs.webkit.org/show_bug.cgi?id=206944
        <rdar://problem/58440111>

        Reviewed by Alex Christensen.

        Add managed preference for iOS to allow enterprise customers to keep using legacy sync XHRs
        during page dismissal.

        * Shared/WebPreferencesDefaultValues.cpp:
        (WebKit::defaultDisallowSyncXHRDuringPageDismissalEnabled):
        * Shared/WebPreferencesDefaultValues.h:
        * Shared/ios/WebPreferencesDefaultValuesIOS.mm:
        (WebKit::allowsDeprecatedSynchronousXMLHttpRequestDuringUnload):

2020-01-29  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Move unsetenv to WebProcessMain.cpp after r255342

        I forgot to do that before landing the patch.

        * WebProcess/EntryPoint/unix/WebProcessMain.cpp:
        (main):
        * WebProcess/gtk/WebProcessMainGtk.cpp:

2020-01-29  youenn fablet  <youenn@apple.com>

        Send WebsiteDataStore media parameters to GPUProcess when needed
        https://bugs.webkit.org/show_bug.cgi?id=206870

        Reviewed by Eric Carlson.
