@@ -66,12 +66,12 @@ bool defaultTextAutosizingUsesIdempotentMode()
 
 bool defaultDisallowSyncXHRDuringPageDismissalEnabled()
 {
-#if PLATFORM(MAC)
+#if PLATFORM(MAC) || PLATFORM(MACCATALYST)
     if (CFPreferencesGetAppBooleanValue(CFSTR("allowDeprecatedSynchronousXMLHttpRequestDuringUnload"), CFSTR("com.apple.WebKit"), nullptr)) {
         WTFLogAlways("Allowing synchronous XHR during page unload due to managed preference");
         return false;
     }
-#elif PLATFORM(IOS_FAMILY)
+#elif PLATFORM(IOS_FAMILY) && !PLATFORM(MACCATALYST)
     if (allowsDeprecatedSynchronousXMLHttpRequestDuringUnload()) {
         WTFLogAlways("Allowing synchronous XHR during page unload due to managed preference");
         return false;
